uploaded ManagerService and relative Test